# git-coupling-analyzer

./: .gitignore  FEATURES_PERF_REVIEW.md  FIXES_APPLIED.md  LOST_FEATURES_ANALYSIS.md  NEXT_ACTIONS.md  README.md  TEST_FILE_DETAILS_README.md  agent.md  last-task.md  pyproject.toml  qa.md  v2.md  verify_git_fix.py  x2.md
.github/: copilot-instructions.md
QA/: README.md  UI_FEATURES_QA_REPORT.md
QA/scripts/: MCP_TEST_SCENARIOS.md  api_test_collector.py  author_analysis.sh  bulk_commits.sh  cochange_analysis.sh  collect_detailed_stats.py  collect_qa_data.py  commit_patterns.sh  coupling_ground_truth.sh  deleted_files.sh  file_change_frequency.sh  gather_repo_stats.sh  hotspot_analysis.sh  module_analysis.sh  rename_detection.sh  run_all_qa.sh  test_impl_coupling.sh  test_mcp_scenario.py  test_mcp_scenario_implementation.py  validate_api_results.py
docs/: CODE_GRAPH_DESIGN.md  FEATURE_ROADMAP.md  FEATURE_SUGGESTIONS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REVIEW.md  OLD_PROJECT_OVERVIEW.md  RESTRUCTURING_SUMMARY.md  SEMANTIC_CLUSTERING_DESIGN.md  SETTINGS_CONFIGURATION_REVIEW.md  SETTINGS_FIXES_SUMMARY.md  SPEC.md  SUGGESTIONS.md  UNIFIED_PLATFORM_DESIGN-full-vision.md
docs/tasks/: FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_MIGRATION_STATUS.md  QA.md  cluster-insights.md  clustering-module-refactor.md  clustering-refactor-progress.md  coupling-quality-controls.md  edit-and-draft  explain-coupling.md  file-details-panel.md  folder-tree-features.md  frontend-components-redesign.md  frontend_migration_summary.md  global-issues.md  impact-graph-ux.md  save-reopen-exports.md  z-issues.md
file-details/: issues.md
frontend/: index.html  package-lock.json  package.json
lfca/: __init__.py  __main__.py  api.py  changesets.py  cli.py  cluster.py  config.py  edges.py  extract.py  git.py  indexes.py  logging_utils.py  mirror.py  runner.py  schema.py  storage.py  sync.py
lfca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research/: What are the best open-source tools and research p.md  details more __algos_techniques_visualizaion descr.md
scripts/: generate-component.sh  generate-hook.sh  migrate_v2.py
src/code-intel-interfaces/: pyproject.toml
src/code-intel-interfaces/code_intel_interfaces/: __init__.py  analyzer.py  dep_analyzer.py  git_analyzer.py  intelligence.py  semantic_analyzer.py  types.py
src/git-analyzer/: pyproject.toml
src/git-analyzer/git_analyzer/: __init__.py  __main__.py  analysis_config.py  api.py  changesets.py  cli.py  config.py  edges.py  extract.py  file_metrics.py  git.py  mirror.py  plugin.py  presets.py  runner.py  scanner.py  sync.py
src/git-analyzer/git_analyzer/clustering/: __init__.py  components.py  dbscan.py  hierarchical.py  insights.py  label_propagation.py  louvain.py  registry.py
src/platform/: pyproject.toml
src/platform/code_intel/: __init__.py  app.py  config.py  orchestrator.py  registry.py  schema.py  storage.py  storage.py.legacy
src/platform/code_intel/routers/: analysis.py  analysis_stream.py  analyzers.py  deps.py  git.py  graph.py  intelligence.py  repos.py  risk.py  semantic.py  tree.py
tests/: test_analysis_api_flow.py  test_api_fixes.py  test_clustering.py  test_e2e_analysis.py  test_file_details_api.py  test_hot_stable_metrics.py  test_quick_check.py
v2/: END_TO_END_FLOW_ANALYSIS.md  SYSTEM_INVESTIGATION_SUMMARY.md  TECHNICAL_SETTINGS_ANALYSIS.md
v3/: IDEAS_INDEX.md  speech.md
(+509 files in other folders)
