[project]
name = "git-coupling-analyzer-workspace"
version = "2.0.0"
description = "Monorepo for Code Intelligence Platform"
requires-python = ">=3.10"

dependencies = [
    # Install projects in editable mode
    "code-intel-platform @ file:///home/afettah/workspace/git-coupling-analyzer/src/platform",
    "git-analyzer @ file:///home/afettah/workspace/git-coupling-analyzer/src/git-analyzer",
    "dep-analyzer @ file:///home/afettah/workspace/git-coupling-analyzer/src/dep-analyzer",
    "semantic-analyzer @ file:///home/afettah/workspace/git-coupling-analyzer/src/semantic-analyzer",
    "project-intelligence @ file:///home/afettah/workspace/git-coupling-analyzer/src/project-intelligence",
    "code-intel-interfaces @ file:///home/afettah/workspace/git-coupling-analyzer/src/code-intel-interfaces",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []

[tool.pytest.ini_options]
pythonpath = ["platform", "git-analyzer", "dep-analyzer", "semantic-analyzer", "project-intelligence"]
