[project]
name = "git-analyzer"
version = "0.1.0"
dependencies = [
    "pyarrow>=14.0.0",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "code-intel-interfaces",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["git_analyzer*"]
