[project]
name = "code-intel-platform"
version = "0.1.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pyarrow>=14.0.0",
    "networkx>=3.0",
    "code-intel-interfaces",
    # Analyzer packages
    "git-analyzer",
    "dep-analyzer",
    "semantic-analyzer",
    "project-intelligence",
]

[tool.setuptools.packages.find]
include = ["code_intel", "code_intel.*"]
